# JPEG.Encryption

./: README.md
JPEG.Encryption.C#/: JPEG.Encryption.sln  JPEG.Encryption.vsmdi  Local.testsettings  TraceAndTestImpact.testsettings
JPEG.Encryption.C#/JPEG.Encryption.BL/: BLFactory.cs  Bridge.cs  DependencyCheck.cs  JPEG.Encryption.BL.csproj
JPEG.Encryption.C#/JPEG.Encryption.BL/Properties/: AssemblyInfo.cs
JPEG.Encryption.C#/JPEG.Encryption.BL/implementations/: BusinessLogic.cs  CameraBL.cs  FaceDetectBL.cs  JpegOperationsBL.cs  RaspberryPiBL.cs
JPEG.Encryption.C#/JPEG.Encryption.BL/interfaces/: IBusinessLogic.cs  ICamera.cs  IFaceDetect.cs  IJpegOperation.cs  IRaspberryPi.cs
JPEG.Encryption.C#/JPEG.Encryption.Domain/: JPEG.Encryption.Domain.csproj
JPEG.Encryption.C#/JPEG.Encryption.Domain/Properties/: AssemblyInfo.cs
JPEG.Encryption.C#/JPEG.Encryption.Domain/domainclasses/: CryptoFlags.cs  RoI.cs
JPEG.Encryption.C#/JPEG.Encryption.Domain/enum/: EnumDetectionType.cs  EnumErrorCode.cs  EnumHelper.cs  EnumMode.cs
JPEG.Encryption.C#/JPEG.Encryption.Domain/exception/: CameraException.cs  EncryptionException.cs  FaceDetectionException.cs  HttpWebRequestException.cs
JPEG.Encryption.C#/JPEG.Encryption.Gui/: FaceDetectionSettings.cs  FormFaceDetectionSettings.Designer.cs  FormFaceDetectionSettings.cs  FormFaceDetectionSettings.resx  FormMain.Designer.cs  FormMain.cs  FormMain.resx  JPEG.Encryption.Gui.csproj  Program.cs  app.config
JPEG.Encryption.C#/JPEG.Encryption.Gui/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
JPEG.Encryption.C#/JPEG.Encryption.Gui/extendedTreeNodes/: TreeNodeEncryptedImage.cs  TreeNodeImage.cs
JPEG.Encryption.C#/JPEG.Encryption.UnitTest/: JPEG.Encryption.UnitTest.csproj  UnitTests.cs  app.config
JPEG.Encryption.C#/JPEG.Encryption.UnitTest/Properties/: AssemblyInfo.cs
JPEG.Encryption.C/JPEG.Encryption.Bridge/: Makefile  bridge.c  bridge.h
JPEG.Encryption.C/JPEG.Encryption.Core/: JPEG.Encryption.Core.c  JPEG.Encryption.Core.h  JPEGparser.c  JPEGparser.h  Makefile  prng.c  prng.h  rijndael.c
JPEG.Encryption.RaspberryPi/src/prototype3/: CMakeLists.txt  Makefile  README  README.txt  camcv.c  camcvTiming.c
JPEG.Encryption.RaspberryPi/testImages/: extractImages.sh  source.txt  staticRoIs.txt
JPEG.Encryption.RaspberryPi/www/: index.html
(+15 files in other folders)
